Add link to privacy page & enhance UI

--- a/config/locales/welcomes/en.yml
+++ b/config/locales/welcomes/en.yml
@@ -30,3 +30,4 @@ en:
     total_user_feedback: Total User Feedback
     chat_with_us: Please chat with us!
     feedback_by_sub_category: Feedback by Sub Category
+    privacy_policy: Privacy Policy
