--- a/config/locales/welcomes/km.yml
+++ b/config/locales/welcomes/km.yml
@@ -30,3 +30,4 @@ km:
     total_user_feedback: មតិយោបល់អ្នកប្រើសរុប
     chat_with_us: សូមជជែកជាមួយយើងខ្ញុំ!
     feedback_by_sub_category: មតិយោបល់តាមប្រភេទរង
+    privacy_policy: គោលការណ៍​ភាព​ឯកជន
