Update meta tags data

--- a/config/locales/meta_tags/en.yml
+++ b/config/locales/meta_tags/en.yml
@@ -1,7 +1,7 @@
 en:
   meta_tags:
-    site: Welcome to OW4C InSTEDD iLab Southeast Asia
-    title: Data provided by OW4C
-    description: With the participation of Mr. Buon Heng, Director of the Department of Functions and Resources of the General Department of Administration, Ministry of Interior, and Mr. Sok Thol, Director of Administration of Siem Reap Provincial Hall. Chairman
+    site: OW4C's Public Dashboard
+    title: Welcome to OW4C's Public Dashboard
+    description: Data reported on this dashboard was collected from the actual use of the One Window for Citizens (OW4C) Project's @Pidor chatbot and interactive voice response technology tools.
     twitter:
-      site: OW4C Public dashboard
+      site: OW4C's Public Dashboard
