--- a/config/locales/meta_tags/km.yml
+++ b/config/locales/meta_tags/km.yml
@@ -1,7 +1,7 @@
 km:
   meta_tags:
-    site: សូមស្វាគមន៍មកកាន់ OW4C InSTEDD iLab Southeast Asia
-    title: ទិន្នន័យការិយាល័យច្រកចេញចូលតែមួយ
-    description: ដោយមានការអញ្ជើញចូលរួម ដោយលោក បួន ហេង ប្រធាននាយកដ្ឋានមុខងារ និងធនធាន នៃអគ្គនាយកដ្ឋានរដ្ឋបាលក្រសួងមហាផ្ទៃ និងលោក សុខ ថុល នាយករដ្ឋបាលសាលាខេត្តសៀមរាប។វគ្គបណ្តុះបណ្តាលនេះ មានរយៈពេលពេញមួយថ្ងៃ ដោយមានការចួលរួមពីអស់លោក លោកស្រី ប្រធាន អនុប្រធានអង្គ
+    site: ប្រព័ន្ធមើលទិន្នន័យសាធារណៈរបស់គម្រោង OW4C
+    title: សូមស្វាគមន៍មកកាន់ប្រព័ន្ធមើលទិន្នន័យសាធារណៈ
+    description: ទិន្នន័យនៃការប្រើប្រាស់នេះគឺជាទិន្នន័យដែលយកចេញពីការប្រើប្រាស់ឧបករណ៍បច្ចេកវិទ្យារបស់ប្រជាពលរដ្ឋពីគម្រោងច្រកចេញចូលតែមួយសម្រាប់ពលរដ្ឋ
     twitter:
-      site: ផ្ទាំងព័ត៌មានសាធារណៈ OW4C
+      site: ប្រព័ន្ធមើលទិន្នន័យសាធារណៈរបស់គម្រោង OW4C
