--- a/config/locales/sidebar/en.yml
+++ b/config/locales/sidebar/en.yml
@@ -13,3 +13,4 @@ en:
     confirm_logout: Are you sure you want to logout?
     tickets: Tickets
     provincial_usages: Provincial Usages
+    schedules: Schedules
