--- a/config/locales/sidebar/km.yml
+++ b/config/locales/sidebar/km.yml
@@ -13,3 +13,4 @@ km:
     confirm_logout: តើអ្នកពិតជាចង់ចាកចេញឬ?
     tickets: សំបុត្រ
     provincial_usages: ការប្រើប្រាស់តាមខេត្ត
+    schedules: កាលវិភាគ
