--- a/config/locales/schedules/km.yml
+++ b/config/locales/schedules/km.yml
@@ -1,2 +1,17 @@
 km:
   schedules:
+    save: រក្សាទុក
+    cancel: ចាកចេញ
+    repeat: ធ្វើម្តងទៀតរៀងរាល់ខែ
+    day: ថ្ងៃ
+    at: នៅម៉ោង
+    manual: បើកដំណើរការកំណត់ cron ដោយដៃ
+    edit_title: កែប្រែកាលបរិច្ឆេទ
+    new_title: បង្កើតកាលបរិច្ឆេទថ្មី
+    title: បរិច្ឆេទ
+    name: ឈ្មោះ
+    time: ពេលវេលា
+    edit: កែប្រែ
+    delete: លុបចេញ
+    confirm_msg: តើអ្នកប្រាកដហើយមែនទេ?
+    enabled: បើកដំនើរការ
