remove lang code, add tippy, fix specs

--- a/config/locales/schedules/km.yml
+++ b/config/locales/schedules/km.yml
@@ -5,7 +5,7 @@ km:
     repeat: ធ្វើម្តងទៀតរៀងរាល់ខែ
     day: ថ្ងៃ
     at: នៅម៉ោង
-    manual: បើកដំណើរការកំណត់ cron ដោយដៃ
+    manual: បើកដំណើរការកំណត់ cron ដោយដៃ (សម្រាប់ការអភិវឌ្ឍន៍ប៉ុណ្ណោះ)
     edit_title: កែប្រែកាលបរិច្ឆេទ
     new_title: បង្កើតកាលបរិច្ឆេទថ្មី
     title: បរិច្ឆេទ
@@ -17,3 +17,4 @@ km:
     enabled: បើកដំនើរការ
     disabled: មិនដំនើរការ
     status: ស្ថានភាព
+    notify_with_template: ជូនដំណឹងជាមួយពុម្ព (ឯកសារ .pdf)
