--- a/config/locales/schedules/en.yml
+++ b/config/locales/schedules/en.yml
@@ -5,7 +5,7 @@ en:
     repeat: Repeat every month on
     day: day
     at: at
-    manual: Enable manual cron setting
+    manual: Enable manual cron setting (development only)
     edit_title: Edit schedule
     new_title: New schedule
     title: Schedules
@@ -17,3 +17,4 @@ en:
     enabled: Enabled
     disabled: Disabled
     status: Status
+    notify_with_template: Notify with template (.pdf file)
