--- a/config/locales/welcomes/en.yml
+++ b/config/locales/welcomes/en.yml
@@ -31,3 +31,4 @@ en:
     chat_with_us: Please chat with us!
     feedback_by_sub_category: Feedback by Sub Category
     privacy_policy: Privacy Policy
+    popup_alt_text: Welcome to OW4C public dashboard, Data reported on this dashboard was collected from the actual use of the One Window for Citizens(OW4C) project's @Pidor chatbot and interactive voice response technology tools. សូមស្វាគមន៍មកកាន់ប្រព័ន្ធមើលទិន្នន័យសារធារណៈ ទិន្នន័យនៃការប្រើប្រាស់នេះគឺទិន្នន័យដែលយកចេញពីការប្រើប្រាស់ឧបករណ៍បច្ចេកវិទ្យារបស់ប្រជាពលរដ្ឋពីគម្រោងច្រកចេញចូលតែមួយសម្រាប់ពលរដ្ឋ សម្រាប់ប្រព័ន្ធទទួលយកព័ត៌មានអាចចូលប្រើប្រាស់បានតាមរយៈ facebook Page(@pidorow4cbot) ឫ ទូរស័ព្ទលេខ 095888159 ឬ 087999393 ឬ 0889888159
