--- a/config/locales/provincial_usages/en.yml
+++ b/config/locales/provincial_usages/en.yml
@@ -1,6 +1,6 @@
 en:
   provincial_usages:
-    "no": No.
+    code: Province Code
     location: Province/City
     unique: Total Unique Users
     visit: Total Visit
