--- a/config/locales/schedules/en.yml
+++ b/config/locales/schedules/en.yml
@@ -17,5 +17,5 @@ en:
     enabled: Enabled
     disabled: Disabled
     status: Status
-    notify_with_template: Notify with template (.pdf file)
+    notify_with_template: Notify with template (.pdf)
     report_date: report for %{cur_month} (%{start_date} - %{end_date})
