--- a/config/locales/schedules/km.yml
+++ b/config/locales/schedules/km.yml
@@ -17,5 +17,5 @@ km:
     enabled: បើកដំនើរការ
     disabled: មិនដំនើរការ
     status: ស្ថានភាព
-    notify_with_template: ជូនដំណឹងជាមួយពុម្ព (ឯកសារ .pdf)
+    notify_with_template: ជូនដំណឹងជាមួយពុម្ព (.pdf)
     report_date_html: ប្រចាំខែ%{cur_month} <small>(%{start_date} - %{end_date})</small>
