--- a/config/locales/provincial_usages/km.yml
+++ b/config/locales/provincial_usages/km.yml
@@ -1,6 +1,6 @@
 km:
   provincial_usages:
-    code: លេខកូដខេត្ត
+    rank: លេខរៀង
     location: ខេត្ត/ក្រុង
     unique: អ្នកប្រើប្រាស់ប្លែកៗគ្នា
     visit: អ្នកប្រើប្រាស់មានចំនួនសរុប
@@ -9,4 +9,3 @@ km:
     download: ទាញយក
     csv: CSV
     image: រូបភាព(.png)
-    total: សរុប
